fix: adjusted the hover effects for the clipped border

--- a/src/sections/portfolio/PortfolioSection.css
+++ b/src/sections/portfolio/PortfolioSection.css
@@ -117,7 +117,7 @@
   clip-path: polygon(0% 0%, 0 0, 100% 0, 100% 100%, 100% 100%, 0% 100%);
 
   color: white;
-  border-color: white;
+  border-color: var(--color1);
 }
 
 .portfolio-item:hover .portfolio-upper-container {
@@ -167,10 +167,12 @@
   transition: all 0.5s ease-out;
 
   box-shadow: 0px 0px 50px 5px rgba(90, 90, 247, 0.3) inset;
+  opacity: .3;
 }
 
 .portfolio-item:hover .portfolio-img-container {
   background-size: 120% auto;
+  opacity: 1;
   /* clip-path: polygon(0% 0%, 0 0, 100% 0, 100% 100%, 100% 100%, 0% 100%); */
 }
 /* 
@@ -208,6 +210,9 @@
   opacity: 0.1;
 }
 
+.portfolio-item:hover .portfolio-name-container {
+}
+
 .portfolio-img-container .cover {
   width: 100%;
   height: 100%;
@@ -224,6 +229,7 @@
 .portfolio-name-container {
   font-size: 20px;
   text-align: left;
+  transition: all .5s ease;
 }
 
 .portfolio-details-container {
